<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:elevation="5dp"
        app:title="BMI Calculator" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/_units"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rbg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/rb1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_regular"
                    android:paddingHorizontal="5dp"
                    android:text="@string/standard"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_regular"
                    android:paddingHorizontal="5dp"
                    android:text="@string/metric"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/_weight"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner_bg"
            android:hint="@string/pounds"
            android:inputType="numberDecimal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/_height"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corner_bg"
            android:hint="@string/inches"
            android:inputType="numberDecimal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingVertical="10dp"
            android:text="@string/calculate" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <TextView
                   android:textSize="20sp"
                   android:textColor="@android:color/holo_red_dark"
                   android:id="@+id/result"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content" />
           </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>